Parse utils list mapping